# libreoffice-python-path-ext

./: README.md  cspell.json  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  startup.sh
.devcontainer/res/defaults/: registrymodifications.xcu
Documents/: paths01.txt  paths02.txt
macro/: extension.py
oxt/: LICENSE-en.txt  py_runner.py
oxt/___lo_pip___/dialog/handler/: logger_options.py  py_paths_options.py
oxt/___lo_pip___/lo_util/: link_cpython.py
oxt/___lo_pip___/py_paths/: __init__.py  path_item.py  path_items.py
oxt/___lo_pip___/settings/: py_paths.py  py_paths_settings.py
oxt/config/: config.xcs  config.xcu  options.xcu
oxt/dialogs/: logging.xdl  paths.xdl
oxt/resources/: pipstrings_de.properties  pipstrings_el.properties  pipstrings_en_US.properties  pipstrings_es.properties  pipstrings_fr.properties  pipstrings_hu.properties  pipstrings_it.properties  pipstrings_ja.properties  pipstrings_ko.properties  pipstrings_nl.properties  pipstrings_pt.properties  pipstrings_zh.properties
src/processing/: json_config.py
